math clean up and render, reorganized transcripts

--- a/C1-L05-alt.qmd
+++ b/C1-L05-alt.qmd
@@ -172,13 +172,13 @@ As we will see in coming lessons, it is often more convenient to work with the n
 The reason we can write $f(\theta\mid x) \propto f(x \mid \theta)f(\theta)$ is because the denominator $\int_{-\infty}^{\infty} f(x\mid\theta)\ f(\theta)\ d\theta$ is free of $\theta$. It is just a normalizing constant. Therefore, we can ignore any multiplicative terms not involving $\theta$. For example, if $\theta ∼ N(m, s2)$, then
 
 $$\begin{aligned}
-f(\theta) &= \frac{1}{\sqrt{2πs^2}}
+f(\theta) &= \frac{1}{\sqrt{2\pi s^2}}
 exp \left [ − \frac{1}{2s^2}(\theta − m)^2 \right ]
 \\ &\propto exp \left [ − \frac{1}{2s^2}(\theta − m)^2 \right ]
 \end{aligned}
 $$ {#eq-normalizing-constants}
 
-Clearly, the expression in the bottom of @eq-normalizing-constants does not integrate to 1 (it integrates to $\sqrt{2πs^2}$ ). Although it is not a PDF, it is proportional to the $N(m, s^2)$ PDF and can be normalized to represent the $N(m, s^2)$ distribution only. Likewise, the posterior $f(\theta\mid x)$ maintains its uniqueness as long as we specify it up to a proportionality constant.
+Clearly, the expression in the bottom of @eq-normalizing-constants does not integrate to 1 (it integrates to $\sqrt{2\pi s^2}$ ). Although it is not a PDF, it is proportional to the $N(m, s^2)$ PDF and can be normalized to represent the $N(m, s^2)$ distribution only. Likewise, the posterior $f(\theta\mid x)$ maintains its uniqueness as long as we specify it up to a proportionality constant.
 
 To evaluate posterior quantities such as posterior probabilities, we will eventually need to find the normalizing constant. If the integral required is not tractable, we can often still simulate draws from the posterior and approximate posterior quantities. In some cases, we can identify $f(x\mid \theta)f(\theta)$ as being proportional to the PDF of some known distribution. This will be a major topic of Lesson 6.
 
