--- a/C1-L11-Ex1.qmd
+++ b/C1-L11-Ex1.qmd
@@ -78,9 +78,9 @@ Beta(1/2, 1/2).
 :::
 
 ::: {#exr-alt-priors-5}
-Scientist A studies the probability of a certain outcome of an experiment and calls it $\theta$ . To be non-informative, he assumes a Uniform(0,1) prior for $\theta$ .
+Scientist A studies the probability of a certain outcome of an experiment and calls it $\theta$ . To be non-informative, he assumes a $Uniform(0,1)$ prior for $\theta$ .
 
-Scientist B studies the same outcome of the same experiment using the same data, but wishes to model the odds $ϕ= \frac{\theta}{1−\theta}$. Scientist B places a uniform distribution on $ϕ$. If she reports her inferences in terms of the probability $\theta$, will they be equivalent to the inferences made by Scientist A?
+Scientist B studies the same outcome of the same experiment using the same data, but wishes to model the odds $\phi= \frac{\theta}{1−\theta}$. Scientist B places a uniform distribution on $\phi$. If she reports her inferences in terms of the probability $\theta$, will they be equivalent to the inferences made by Scientist A?
 :::
 
 ::: {.solution .callout-tip collapse="true"}
