--- a/C2-L03.qmd
+++ b/C2-L03.qmd
@@ -481,7 +481,7 @@ It is important to note that the stationary distribution doesn't always exist fo
 
 The continuous random walk example we gave earlier does not have a stationary distribution. However, we can modify it so that it does have a stationary distribution.
 
-Let the transition distribution be $\mathbb{P}r(X_{t + 1}\mid X_t = x_t)=N(\phi x_t,1)$ where $-1 < \phi < 1$. That is, the probability distribution for the next state is Normal with variance $1$ and mean equal to $ϕ$ times the current state. As long as $\phi$ is between −1 and 1, then the stationary distribution will exist for this model.
+Let the transition distribution be $\mathbb{P}r(X_{t + 1}\mid X_t = x_t)=N(\phi x_t,1)$ where $-1 < \phi < 1$. That is, the probability distribution for the next state is Normal with variance $1$ and mean equal to $\phi$ times the current state. As long as $\phi$ is between −1 and 1, then the stationary distribution will exist for this model.
 
 Let's simulate this chain for $\phi=−0.6$.
 
