--- a/C3-L07.qmd
+++ b/C3-L07.qmd
@@ -67,7 +67,7 @@ The **Naïve Bayes classifier** is a special case of the mixture model where the
 
 <!-- TODO: summarize this transcript -->
 
-{{< include _C3-L07-T01.qmd >}}
+{{< include transcripts/_C3-L07-T01.qmd >}}
 
 :::
 
@@ -96,7 +96,7 @@ $$ {#eq-mixture-model-simple}
 
 <!-- TODO: summarize this transcript -->
 
-{{< include _C3-L07-T02.qmd >}}
+{{< include transcripts/_C3-L07-T02.qmd >}}
 
 :::
 
@@ -115,7 +115,7 @@ This video walks through the code in @sec-em-algorithm-classification-sample.
 
 <!-- TODO: summarize this transcript -->
 
-{{< include _C3-L07-T03.qmd >}}
+{{< include transcripts/_C3-L07-T03.qmd >}}
 
 :::
 
