--- a/C4-L02-ex2-bayesian-analysis-of-an-eeg-dataset-using-an-ar-p.qmd
+++ b/C4-L02-ex2-bayesian-analysis-of-an-eeg-dataset-using-an-ar-p.qmd
@@ -82,7 +82,7 @@ for(i in 1:n_sample){
   phi_sample[i, ]=mvrnorm(1,phi_MLE,Sigma=v_sample[i]*XtX_inv)
 }
 
-#posterior means of ϕ and v
+#posterior means of \phi and nu
 phi_hat=colMeans(phi_sample)
 v_hat=mean(v_sample)
 
