--- a/C4-L04.qmd
+++ b/C4-L04.qmd
@@ -353,7 +353,7 @@ In the text book AR(p) forecasting is covered in [@prado2000bayesian § 2.2] and
 
 <!-- TODO: summarize this transcript -->
 
-{{< include _C4-L04-T01.qmd >}}
+{{< include transcripts/_C4-L04-T01.qmd >}}
 
 :::
 
@@ -470,7 +470,7 @@ This video goes through the code in the following sections, which simulates data
 
    * Given AR coefficients (e.g. for AR(8)), compute characteristic roots using `polyroot()` on the reversed sign polynomial (first term 1, followed by negative AR coefficients).
    * Reciprocal roots are obtained as $1/\text{root}$.
-   * Use `Mod()` for modulus and `2π / Arg()` for approximate periods of the reciprocal roots.
+   * Use `Mod()` for modulus and $2\pi / \text{Arg}()$ for approximate periods of the reciprocal roots.
 
 2. **Example AR(8)**:
 
@@ -499,7 +499,7 @@ This video goes through the code in the following sections, which simulates data
    * Three AR coefficients derived.
    * Simulated series shows quasi-periodic behavior plus extra persistence.
    * ACF: still shows decaying periodicity.
-   * PACF: more than two significant lags, consistent with AR(3).
+   * PACF: more than two significant lags, consistent with *AR(3)*.
 
 **Key Insight**:
 
