--- a/C4-L05.qmd
+++ b/C4-L05.qmd
@@ -139,7 +139,7 @@ This gives full Bayesian posterior samples of $(\boldsymbol\beta, v)$.
 ::: {.callout-note collapse="true"}
 ## Video Transcript {.unnumbered}
 
-{{< include _C4-L05-T01.qmd >}}
+{{< include transcripts/_C4-L05-T01.qmd >}}
 
 :::
 
@@ -224,7 +224,7 @@ $$
 ::: {.callout-note collapse="true"}
 ## Video Transcript {.unnumbered}
 
-{{< include _C4-L05-T02.qmd >}}
+{{< include transcripts/_C4-L05-T02.qmd >}}
 
 :::
 
@@ -235,7 +235,7 @@ This video walks through the code in the next section which demonstrates Bayesia
 ::: {.callout-note collapse="true"}
 ## Video Transcript {.unnumbered}
 
-{{< include _C4-L05-T03.qmd >}}
+{{< include transcripts/_C4-L05-T03.qmd >}}
 
 :::
 
@@ -474,7 +474,7 @@ $$
 ::: {.callout-note collapse="true"}
 ## Video Transcript {.unnumbered}
 
-{{< include _C4-L05-T04.qmd >}}
+{{< include transcripts/_C4-L05-T04.qmd >}}
 
 :::
 
@@ -517,7 +517,7 @@ This process illustrates Bayesian uncertainty in frequency-domain features of AR
 ::: {.callout-note collapse="true"}
 ## Video Transcript {.unnumbered}
 
-{{< include _C4-L05-T05.qmd >}}
+{{< include transcripts/_C4-L05-T05.qmd >}}
 
 :::
 
