--- a/C4-L06.qmd
+++ b/C4-L06.qmd
@@ -306,7 +306,7 @@ $$ {#eq-NDLM-model-shothand-notation}
 ::: {.callout-note collapse="true"}
 ## Video Transcript {.unnumbered}
 
-{{< include _C4-L03-T01.qmd >}}
+{{< include transcripts/_C4-L03-T01.qmd >}}
 
 :::
 
@@ -564,7 +564,7 @@ Note that the third order polynomial model is covered in
 ::: {.callout-note collapse="true"}
 ## Video Transcript {.unnumbered}
 
-{{< include _C4-L03-T02.qmd >}}
+{{< include transcripts/_C4-L03-T02.qmd >}}
 
 :::
 
@@ -760,7 +760,7 @@ There is a paper [@prado2000bayesian] on TVAR models that is a good reference fo
 ::: {.callout-note collapse="true"}
 ## Video Transcript {.unnumbered}
 
-{{< include _C4-L03-T03.qmd >}}
+{{< include transcripts/_C4-L03-T03.qmd >}}
 
 :::
 
@@ -954,7 +954,7 @@ We used the superposition principle to build this model. If we need additional c
 ::: {.callout-note collapse="true"}
 ## Video Transcript {.unnumbered}
 
-{{< include _C4-L03-T04.qmd >}}
+{{< include transcripts/_C4-L03-T04.qmd >}}
 
 :::
 
