--- a/C4-L07.qmd
+++ b/C4-L07.qmd
@@ -218,7 +218,7 @@ $$ {#eq-posterior-distribution}
 ::: {.callout-note collapse="true"}
 ## Video Transcript
 
-{{< include _C4-L03-T05.qmd >}}
+{{< include transcripts/_C4-L03-T05.qmd >}}
 
 :::
 
@@ -612,7 +612,7 @@ $$
 
 ## Video Transcript
 
-{{< include _C4-L03-T06.qmd >}}
+{{< include transcripts/_C4-L03-T06.qmd >}}
 
 :::
 
@@ -929,7 +929,7 @@ In this video walk through the code provided in the section below the comment
 ::: {.callout-note collapse="true"}
 ## Video Transcript
 
-{{< include _C4-L03-T07.qmd >}}
+{{< include transcripts/_C4-L03-T07.qmd >}}
 
 :::
 
@@ -940,7 +940,7 @@ The `dlm` package in R is a powerful tool for working with dynamic linear models
 ::: {.callout-note collapse="true"}
 ## Video Transcript
 
-{{< include _C4-L03-T08.qmd >}}
+{{< include transcripts/_C4-L03-T08.qmd >}}
 
 :::
 
